<resources>
    <string name="app_name">Express App</string>
    <string name="Usuario_Defecto">Default User</string>
    <!-- VISTA DE POKEMON -->
    <string name="title_pokemon">Pokédex</string>
    <!-- VISTA DE AGRADECIMIENTO -->
    <string name="title_agradecimiento">Carta</string>
    <string name="agradecimientoText">Agradecimientos Especiales a:</string>
    <string name="email_docente">calyr.software@gmail.com</string>
    <string name="texto">Le agradecemos por compartir sus conocimientos con nosotros, por estar siempre en lo cierto en su educación y por apoyarnos y ayudarnos siempre. Gracias de nuevo de parte del equipo Express App</string>
    <!-- VISTA DE LOGIN -->
    <string name="title_login">Log In</string>
    <string name="title_register">Sign Up</string>
    <string name="express">Express</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="access">Access</string>
    <!-- VISTA DE MENU -->
    <string name="title_menu">Menú</string>
    <string name="cerrar_sesion">Cerrar Sesion</string>
    <string name="Alarmas">Alarmas</string>
    <string name="Cámara">Cámara</string>
    <string name="Configuraciones">Configuraciones</string>
    <string name="Contactos">Contactos</string>
    <string name="Galeria">Galeria</string>
    <string name="Horario">Horario</string>
    <!-- VISTA DE GALERIA -->
    <string name="title_galeria">Galeria</string>
    <string name="title_galeria_completa">Foto Completa</string>
    <string name="iv_foto">Foto</string>
    <!-- VISTA DE CONTACTOS -->
    <string name="title_contactos">Contactos</string>
    <string name="title_contactos_lista">Lista de Contactos</string>
    <string name="new_contact">Crear el contacto</string>
    <string name="numero">Telefono</string>
    <string name="email">Correo Electronico</string>
    <string name="ubicacion">Direccion</string>
    <string name="add_contact">Añadir Contacto</string>
    <string name="name_contact">Nombre del contacto</string>
    <string name="list_contact">Lista de contactos</string>
    <string name="buscar_contacto">Buscar contacto</string>
    <string name="vladimir_79335515">Vladimir 79335515</string>
    <string name="joseph_64078525">Joseph 64078525</string>
    <string name="rafael_69852546">Rafael 69852546</string>
    <string name="foto1">foto1</string>
    <string name="foto2">foto2</string>
    <string name="foto3">foto3</string>
    <!-- VISTA DE HORARIO -->
    <string name="title_horario">Horario</string>
    <string name="action_search">Buscar</string>
    <string name="action_share">Compartir</string>
    <string name="Ajustes">Ajustes</string>
    <string name="Administrar_horario">Administrar horario</string>
    <string name="Eliminar">Eliminar</string>
    <!-- VISTA DE ALARMA -->
    <string name="title_alarma">Alarma</string>
    <string name="kardex">Kardex</string>
    <string name="tus_materias_asignadas">Tus Materias Asignadas</string>
    <string name="matematicas">Matematicas</string>
    <string name="fisica">Fisica</string>
    <string name="quimica">Quimica</string>
    <string name="historia">Historia</string>
    <string name="literatura">Literatura</string>
    <string name="cancelar">Cancelar</string>
    <string name="recordar">Recordar</string>
    <!-- VISTA DE WELCOME -->
    <string name="title_welcome">Welcome</string>
    <string name="description">Aplicacion Mobile desarrollada para un fin en comun: la organizacion y el interes por las actividades para todo tipo de personas y adaptamiento a todas sus actividades posibles.Siendo de gran apoyo por su eficiencia y rapidez desde un dispositivo celular.</string>
    <!-- VISTA DE CAMARA -->
    <string name="title_camara">Camara</string>
    <string name="tomar_foto">Tomar foto</string>
    <string name="textview">TextView</string>
    <string name="foto_de_perfil">Fotografia de Perfil</string>
    <string name="ponga_su_mejor_foto">Ponga su Mejor Foto</string>
    <string name="foto_identificador">Su foto le ayuda para que sus contactos pueda identificarle rapido</string>
    <!--  HOMESCREEN  -->
    <string name="Retrofit">Rick and Morty App</string>
    <string name="home_title">Characters</string>
    <string name="previous_button">Previous</string>
    <string name="next_button">Next</string>
    <!-- DETAILSCREEN   -->
    <string name="first_location">First seen in:</string>
    <string name="last_location">Last known location:</string>
    <string name="specie">Specie:</string>
    <string name="status">Status:</string>
    <string name="gender">Gender:</string>
</resources>