<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/ratingHeaderTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tus_materias_asignadas"
        android:textSize="26sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="30dp" />

    <RadioGroup
        android:id="@+id/ratingRadioGroup"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="25dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ratingHeaderTextView">

        <RadioButton
            android:id="@+id/matematicas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/matematicas" />

        <RadioButton
            android:id="@+id/fisica"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fisica" />

        <RadioButton
            android:id="@+id/quimica"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quimica" />

        <RadioButton
            android:id="@+id/historia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/historia" />

        <RadioButton
            android:id="@+id/literatura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/literatura" />
    </RadioGroup>

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginBottom="25dp"
        android:backgroundTint="#EC407A"
        android:text="@string/cancelar"
        android:textColor="#ffff"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ratingRadioGroup" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="25dp"
        android:backgroundTint="#26C6DA"
        android:text="@string/recordar"
        android:textColor="#fff"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ratingRadioGroup" />

</androidx.constraintlayout.widget.ConstraintLayout>