<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/accent_color"
    tools:context=".UserInterface.Login.LoginAdapter">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <VideoView
            android:id="@+id/vv_fondo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </VideoView>

        <Button
            android:id="@+id/btn_welcome"
            android:layout_width="68dp"
            android:layout_height="40dp"
            android:layout_marginBottom="6dp"
            android:backgroundTint="@color/white"
            android:drawableBottom="@drawable/flecha_1_izquierda"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintVertical_chainStyle="packed">
        </Button>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/express"
            android:textSize="60sp"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="25dp"
            android:fontFamily="@font/bondrians">
        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textStyle="bold"
            android:background="@color/ambar"
            android:textSize="30dp"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="25dp"
            android:fontFamily="@font/roboto_regular">
        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/Usuario_Defecto"
            android:textStyle="bold"
            android:drawableLeft="@drawable/ic_hand"
            android:drawableRight="@drawable/ic_hand"
            android:textAlignment="center"
            android:layout_marginRight="25dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="40dp"
            android:textSize="36sp"
            android:textColor="@color/white"
            android:background="@color/black">
        </TextView>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:background="@color/purple_200"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent"
            app:srcCompat="@drawable/gmail" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/e_mail"
            android:layout_marginRight="25dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="50dp"
            android:inputType="textEmailAddress"
            android:drawableLeft="@drawable/ic_email"
            android:textSize="15sp"
            android:background="@drawable/edittext_custom"
            android:padding="15dp">
        </EditText>

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/password"
            android:layout_marginRight="25dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="15dp"
            android:inputType="textPassword"
            android:drawableLeft="@drawable/ic_password"
            android:textSize="15sp"
            android:background="@drawable/edittext_custom"
            android:padding="15dp">
        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="bottom"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/btn_register"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_marginLeft="40dp"
            android:background="@drawable/rounded_button"
            android:drawableLeft="@drawable/ic_login"
            android:paddingLeft="20dp"
            android:paddingRight="40dp"
            android:text="@string/register"
            android:textSize="19dp"
            android:textStyle="bold">
        </Button>

        <Button
            android:id="@+id/btn_acceder"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rounded_button"
            android:drawableLeft="@drawable/ic_login"
            android:paddingLeft="20dp"
            android:paddingRight="40dp"
            android:text="@string/access"
            android:textSize="20dp"
            android:textStyle="bold">
        </Button>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>